# mcp-pptx

./: CHANGELOG.md  IMPLEMENTATION_STATUS.md  README.md  TROUBLESHOOTING.md  architecture.md  details-1.md  details-2.md  details-3.md  packages.md  project.md  pyproject.toml  requirements.txt  run_server.py  summary.md
docs/: README.md  idea.md
examples/: basic_usage.py
mcp_pptx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
output/: mcp_pptx_demo.pptx
src/mcp_pptx/: __init__.py  __main__.py  server.py
src/mcp_pptx/cache/: __init__.py  asset_cache.py
src/mcp_pptx/extraction/: __init__.py  theme_extractor.py
src/mcp_pptx/models/: __init__.py  deck_spec.py  theme_spec.py
src/mcp_pptx/rendering/: __init__.py  content_fillers.py  layouts.py  renderer.py  theme_applicator.py
src/mcp_pptx/tools/: __init__.py  validator.py
tests/: __init__.py  sample.py  test_all_layouts.py  test_bullet_logic.py  test_bullet_splitting.py  test_code_slides.py  test_code_splitting.py  test_default_theme.py  test_direct_colors.py  test_models.py  test_server.py
